Fixing responsive issues on mobile

--- a/src/styling/Contact.css
+++ b/src/styling/Contact.css
@@ -38,6 +38,6 @@
     #contact .contact-form {
         align-items: center;
         justify-content: center;
-        margin: 10% 10% 10%;
+        margin: 11% 10% 10%;
     }
 }
