--- a/src/styling/Experience.css
+++ b/src/styling/Experience.css
@@ -210,4 +210,18 @@
     #timeline ul li:nth-child(even) .box {
         left: 40px;
     }
+
+    @media (max-width: 450px) {
+        #timeline ul li .box {
+            width: 330px;
+        }
+
+        #timeline ul li:nth-child(odd) .box {
+            left: 32px;
+        }
+
+        #timeline ul li:nth-child(even) .box {
+            left: 32px;
+        }
+    }
 }
